src/objects/QPMS__Regulatory_Report__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>TEXT(Today() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Due Date</fullName>
                </value>
                <value>
                    <fullName>Regulatory Report Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>Store the approval group value</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Process Complete</description>
        <inlineHelpText>Approval Process Complete</inlineHelpText>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Required</description>
        <inlineHelpText>Approval Required</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Approval Status</description>
        <inlineHelpText>Approval Status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 1</description>
        <inlineHelpText>Approver 1</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 2</description>
        <inlineHelpText>Approver 2</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 3</description>
        <inlineHelpText>Approver 3</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <inlineHelpText>Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>ChangeFieldApprovalStatus</description>
        <inlineHelpText>ChangeFieldApprovalStatus</inlineHelpText>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Owner__c</fullName>
        <description>Complaint Owner Id</description>
        <formula>CASESAFEID(QPMS__Complaint__r.OwnerId)</formula>
        <label>Complaint Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Regulatory Reports</relationshipLabel>
        <relationshipName>Regulatory_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>CurrentApprovalSequenceNumber</description>
        <inlineHelpText>CurrentApprovalSequenceNumber</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__FDA_Comments__c</fullName>
        <description>FDA Comments</description>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FDA_Status__c</fullName>
        <label>FDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__FollowUp_Date__c</fullName>
        <description>FollowUp Date</description>
        <inlineHelpText>FollowUp Date</inlineHelpText>
        <label>FollowUp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__FollowUp_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FollowUp Required</description>
        <inlineHelpText>FollowUp Required</inlineHelpText>
        <label>FollowUp Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <label>Follow Up Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial Submitter</description>
        <inlineHelpText>Initial Submitter</inlineHelpText>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_ReportsyjCN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Initiating Site Security</description>
        <inlineHelpText>Initiating Site Security</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>New Due Date</description>
        <inlineHelpText>New Due Date</inlineHelpText>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Owner</description>
        <inlineHelpText>New Owner</inlineHelpText>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner/DueDate</description>
        <inlineHelpText>Note To Approver Owner/DueDate</inlineHelpText>
        <label>Note To Approver Owner/DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>Note To Approver</description>
        <inlineHelpText>Note To Approver</inlineHelpText>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Regulatory Report from which this follow up report has been created</description>
        <inlineHelpText>Lookup to Regulatory Report from which this follow up report has been created</inlineHelpText>
        <label>Parent Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Followup Reports</relationshipLabel>
        <relationshipName>Regulatory_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Previous_Status__c</fullName>
        <description>This field is used to store previous status value.it is used for rerun Assessment functionality</description>
        <label>Previous Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <description>Reason for void</description>
        <label>Reason For Void</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assesment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Assesment</label>
        <referenceTo>QPMS__Regulatory_Assesment__c</referenceTo>
        <relationshipLabel>Regulatory Reports</relationshipLabel>
        <relationshipName>Regulatory_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assessment_Owner__c</fullName>
        <formula>CASESAFEID(QPMS__Regulatory_Assesment__r.OwnerId)</formula>
        <label>Regulatory Assessment Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>Regulatory Body Value which we selected in Regulatory Assessment</description>
        <formula>TEXT( QPMS__Regulatory_Assesment__r.QPMS__Regulatory_Body__c )</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Submission_Number_Scheme__c</fullName>
        <description>Submission Number Scheme</description>
        <formula>QPMS__Complaint__r.QPMS__Customer_Experience_Type__r.QPMS__Number_Scheme__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Submission Number Scheme</inlineHelpText>
        <label>Submission Number Scheme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Submission_Number__c</fullName>
        <label>Submission Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Submission_Type__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regulatory_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplemental_Due_Date__c</fullName>
        <label>Supplemental Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplemental_Required__c</fullName>
        <label>Supplemental Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__lastSelectedForm__c</fullName>
        <defaultValue>&apos;A&apos;</defaultValue>
        <description>Holds the value of last saved form</description>
        <label>lastSelectedForm</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Regulatory Report</label>
    <nameField>
        <label>Regulatory Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulatory Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>